--- a/css/home_style.css
+++ b/css/home_style.css
@@ -11,7 +11,8 @@ ul {
 }
 .nav {
     float: right;
-	margin-top: 0px;
+	margin-top: 10px;
+	margin-right: 30px;
 }
 .nav li {
     float: left;
@@ -26,12 +27,14 @@ ul {
 }
 
 .nav a:hover {
-    color: #fff;
+    color: grey;
 }
 
 .logo {
     float: left;
+	margin-left: 15px;
     margin-top: 12px;
+	color: #000;
 }
 
 .slogan {
@@ -58,16 +61,16 @@ a {
 }
 
 .container {
-	width: 1140px;
-	margin: 0 auto;
+	width: 100%;
 }
 
 .header {
-	background: lightgrey;
+	position: fixed;
+	background: #fff;
 	padding: 0px;
 	margin: 0px;
-	color: #000;
-	height: 60px;
+	height: 80px;
+	width: 100%;
 }
 
 .middle {
@@ -75,20 +78,19 @@ a {
 }
 
 .hero {
-	background-color: grey;
-	height: 500px;
+	margin-top: 55px;
+	background-color: rgba(5, 44, 47, 0.8);
+	height: 600px;
 	padding: 0px;
 	margin: 0px;
 	width: 100%;
 }
 
 .hero-logo {
-	border-radius: 100px;
-	border: 1px solid #fff;
-	margin-left: 470px;
-	margin-top: 30px;
-	height: 200px;
-	width: 200px;
+	margin-top: 7%;
+	height: 300px;
+	width: 400px;
+	padding: 20px;
 }
 
 .hero h1 {
@@ -103,32 +105,31 @@ a {
 	text-align: center;
 }
 
-button {
+.lets-go {
 	color: #fff;
 	width: 200px;
-	height: 50px;
-	font-size: 15px;
+	font-size: 30px;
 	font-weight: bold;
 	border-radius: 10px;
 	border: 2px solid #fff;
-	margin-left: 470px;
-	margin-top: 20px;
+	background-color: rgba(5, 44, 47, 0.8);
+	padding: 2px 20px 2px 20px;
 }
 
-button:hover {
-	color: #000;
+.lets-go:hover {
 	background-color: #fff;
-	border-color: #000;
+	color: grey;
+	border-color: grey;
 }
 
 .section1 {
 	background-color: #fff;
-	height: 400px;
+	height: 500px;
 }
 
 .section1 h2 {
 	text-align: center;
-	padding-top: 20px;
+	padding-top: 50px;
 }
 
 .container:after,
@@ -140,47 +141,112 @@ button:hover {
 
 .boxes .box {
 	float: left;
-	margin-left: 95px;
+	margin-left: 148px;
 }
 
 .box {
-	margin-top: 10px;
+	margin-top: 35px;
 	height: 300px;
 	width: 250px;
-	background-color: lightgrey;
+	background-color: rgba(5, 44, 47, 0.8);
 }
 
 .box p {
 	margin: 30px 20px 0 20px;
 	text-align: center;
 	font-size: 20px;
-	color: #000;
+	color: #fff;
 }
 
-.box .box-pic {
+.box .box-pic1 {
+	height: 150px;
+	width: 150px;
+	margin-left: 50px;
+	margin-top: 30px;
+	border: 2px solid #000;
+	border-radius: 75px;
+	background-color: #fff;
+}
+
+.box .box-pic2 {
 	height: 150px;
 	width: 150px;
 	margin-left: 50px;
 	margin-top: 20px;
+	border: 2px solid #000;
+	border-radius: 75px;
+}
+
+.box .box-pic3 {
+	height: 150px;
+	width: 150px;
+	margin-left: 50px;
+	margin-top: 20px;
+	border: 2px solid #000;
+	border-radius: 75px;
+	background-color: #fff;
 }
 
 .section2 {
-	background-color: grey;
-	height: 400px;
+	background-color: rgba(5, 44, 47, 0.8);
+	height: 500px;
 }
 
 .section2 h2 {
-	text-align: center;
-	padding-top: 20px;
+	padding-top: 30px;
 }
 
-.top-box {
+.section2 p {
+	color: #fff;
+}
+
+.title {
+	margin-top: 0px;
+}
+
+#info {
+	margin: 0.5em;
+	font-size: 15px;
+}
+
+.section2 h2 {
+	margin-bottom: 10px;
+	text-align: center;
+	padding-top: 20px;
+	color: #fff;
+}
+
+.top-box1 {
 	height: 175px;
 	background-color: #fff;
 }
 
-.bottom-box {
-	background-color: grey;
+.top-box2 {
+	height: 300px;
+	background-color: #fff;
+}
+
+.top-box3 {
+	height: 300px;
+	background-color: #fff;
+}
+
+.bottom-box1 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: #fff;
+}
+
+.bottom-box2 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: #fff;
+}
+
+.bottom-box3 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: #fff;
 }
 
 .box1-pic {
@@ -196,6 +262,59 @@ button:hover {
 .box3-pic {
 	height: 175px;
 	width: 250px;
+}
+
+.section3 {
+	background-color: #fff;
+	height: 500px;
+}
+
+#reviews {
+	margin: 0em;
+	font-size: 15px;
+}
+
+#star-rating {
+	margin: 0em;
+	font-size: 15px;
+}
+
+.star {
+	height: 20px;
+	width: 120px;
+	background-color: rgba(5, 44, 47, 0.8);
+}
+
+.person {
+	margin-left: 150px;
+	margin-top: 40px;
+	float: left;
+	height: 100px;
+	width: 100px;
+}
+
+#user-review {
+	color: #fff;
+	font-weight: bold;
+	font-size: 20px;
+	padding: 55px 17px 0 10px;
+	position: relative;
+}
+
+#desc {
+	color: #fff;
+	margin-left: 10px;
+	margin-top: 5px;
+	margin-right: 700px;
+	position: relative;
+}
+
+.section4 {
+	background-color: rgba(5, 44, 47, 0.8);
+}
+
+.section4 h2 {
+	color: #fff;
 }
 
 .footer {
@@ -260,3 +379,4 @@ button:hover {
 
 .footer .nav a:hover {
     color: #fff;
+}
