--- a/Login Page/css/login_style.css
+++ b/Login Page/css/login_style.css
@@ -48,7 +48,12 @@ form #username, #pWord{
 	margin: 10px 11px 30px 11px;
 }
 
+.buttons {
+	display: block;
+}
+
 .pass {
+	margin-top: 10px;
 	margin-left: 400px;
 }
 
@@ -61,7 +66,22 @@ form #username, #pWord{
 }
 
 .pass {
-	margin-left: 250px;
-	margin-top: 0px;
-	padding-top: 0px;
+	margin-left: 50%;
+}
+
+.log {
+	padding-top: 25px;
+	padding-bottom: 25px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 2%;
+	width: 20%;
+	text-align: center;
+	border: 2px solid #000;
+}
+
+.container:after {
+    content: "";
+    display: table;
+    clear: both;
 }
