--- a/css/home_style.css
+++ b/css/home_style.css
@@ -47,7 +47,7 @@ ul {
 .header h2 {
 	padding: 0px;
 	margin: 0px;
-	font-size: 30px;
+	font-size: 45px;
 }
 
 a {
@@ -142,13 +142,30 @@ a {
 .boxes .box {
 	float: left;
 	margin-left: 148px;
-}
-
-.box {
 	margin-top: 35px;
 	height: 300px;
 	width: 250px;
 	background-color: rgba(5, 44, 47, 0.8);
+}
+
+.boxes .box-special {
+	height: 50px;
+}
+
+.box-browse {
+	float: left;
+	margin-left: 120px;
+	margin-top: 35px;
+	height: 300px;
+	width: 250px;
+	background-color: rgba(5, 44, 47, 0.8);
+}
+
+.box-browse p {
+	margin: 30px 20px 0 20px;
+	text-align: center;
+	font-size: 20px;
+	color: #fff;
 }
 
 .box p {
@@ -189,7 +206,7 @@ a {
 
 .section2 {
 	background-color: rgba(5, 44, 47, 0.8);
-	height: 500px;
+	height: 550px;
 }
 
 .section2 h2 {
@@ -216,39 +233,6 @@ a {
 	color: #fff;
 }
 
-.top-box1 {
-	height: 175px;
-	background-color: #fff;
-}
-
-.top-box2 {
-	height: 300px;
-	background-color: #fff;
-}
-
-.top-box3 {
-	height: 300px;
-	background-color: #fff;
-}
-
-.bottom-box1 {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: #fff;
-}
-
-.bottom-box2 {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: #fff;
-}
-
-.bottom-box3 {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: #fff;
-}
-
 .box1-pic {
 	height: 175px;
 	width: 250px;
@@ -262,6 +246,20 @@ a {
 .box3-pic {
 	height: 175px;
 	width: 250px;
+}
+
+.box4-pic {
+	margin-top: 140px;
+	margin-left: 70px;
+	height: 100px;
+	width: 70px;
+}
+
+.box5-pic {
+	margin-top: 90px;
+	margin-left: 90px;
+	height: 100px;
+	width: 70px;
 }
 
 .section3 {
@@ -379,4 +377,33 @@ a {
 
 .footer .nav a:hover {
     color: #fff;
+}
+
+.how {
+	padding-bottom: 40px;
+	margin-top: 2%;
+	width: 20%;
+	text-align: center;
+	border: 2px solid #000;
+}
+
+.view {
+	padding-bottom: 25px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 2%;
+	width: 20%;
+	text-align: center;
+	border: 2px solid #fff;
+}
+
+.top {
+	padding-top: 25px;
+	padding-bottom: 25px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 0%;
+	width: 20%;
+	text-align: center;
+	border: 2px solid #000;
 }
