--- a/css/styles.css
+++ b/css/styles.css
@@ -267,3 +267,29 @@ a {
 .background-grey {
 	background-color: #eceeef;
 }
+
+.fullscreen-section {
+		position: fixed;
+		height: 100vh;
+		width: 100vw;
+		background: linear-gradient(45deg, #4116af, #4a90e2);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+}
+
+.fullscreen-section  .card {
+		padding: 2rem;
+		width: 40vw;
+}
+
+.logo {
+	font-family: 'Pacifico', cursive;
+}
+
+.logo-small-dark {
+		font-size: 1.5rem;
+		color: #4116af;
+		margin: 0;
+		text-align: center;
+}
