--- a/css/styles.css
+++ b/css/styles.css
@@ -268,19 +268,18 @@ a {
 	background-color: #eceeef;
 }
 
+/* LOGIN PAGE */
 .fullscreen-section {
-		position: fixed;
-		height: 100vh;
+		min-height: 100vh;
 		width: 100vw;
 		background: linear-gradient(45deg, #4116af, #4a90e2);
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		padding: 5rem;
 }
 
 .fullscreen-section  .card {
 		padding: 2rem;
 		width: 40vw;
+		margin: auto;
 }
 
 @media screen and (max-width: 600px) {
@@ -288,6 +287,8 @@ a {
 			width: 90vw;
 	}
 }
+
+/* LOGO */
 
 .logo {
 	font-family: 'Pacifico', cursive;
