--- a/css/styles.css
+++ b/css/styles.css
@@ -324,3 +324,45 @@ a {
 		font-size: 100px;
 		margin: 0;
 }
+
+.list-group-item {
+		flex-direction: column;
+		align-items: left;
+}
+
+.list-group-item p {
+	margin: 0;
+}
+
+.list-group-item {
+	border: none;
+	border-right: 1px solid #eceeef;
+	border-left: 5px dotted #4a90e2;
+}
+
+.list-group-item.home {
+	background-color: #eceeef;
+	color: #636c72;
+	border: none;
+}
+
+.list-group-item.active {
+	background-color: #4a90e2;
+	border: none;
+	display: flex;
+  flex-direction: row;
+	justify-content: space-between;
+}
+
+.summary {
+		background: linear-gradient(45deg, #406591, #4a90e2);
+		color: #f7f7f9;
+		text-align: left;
+		padding: 1rem;
+		border-radius: 5px;
+		margin: 1rem 0;
+}
+
+.summary p {
+	margin-bottom: .5rem;
+}
