--- a/css/styles.css
+++ b/css/styles.css
@@ -374,3 +374,23 @@ a {
 .summary p {
 	margin-bottom: .5rem;
 }
+
+.popover-modal {
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(1,1,1,.8);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	display: none;
+}
+
+.popover-modal-container {
+		background-color: #f7f7f9;
+		padding: 2rem;
+		border-radius: 10px;
+		margin: 2rem;
+}
