--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,11 @@ a {
 		margin-bottom: 30px;
 }
 
+.card-link:hover {
+	cursor: pointer;
+	box-shadow: 2px 2px 25px -2px rgba(163,163,163,1);
+}
+
 .card-block, .card-inverse {
 	text-align: left;
 }
@@ -404,6 +409,7 @@ a {
 	padding: .5rem;
 	box-shadow: 5px 5px 20px rgba(1,1,1,.8);
 	color: #f7f7f9;
+	z-index: 5;
 }
 
 @media screen and (max-width: 600px) {
