--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ a {
 
 .welcome-banner {
 	color: #f7f7f9;
-	padding: 10rem;
+	padding: 2rem;
 	text-align: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -427,3 +427,25 @@ a {
 		color: #4116af;
 		font-weight: 500;
 }
+
+/* Always set the map height explicitly to define the size of the div
+	* element that contains the map. */
+ #map {
+	 height: 40vh;
+ }
+
+ #pac-input {
+	 	width: 50vw;
+		margin: 0 20vw;
+		margin-top: 1rem;
+ }
+
+ .map-info {
+	 background-color: White;
+	 padding: 1rem;
+	 display: none;
+ }
+
+  .map-info .card {
+		padding: 2rem;
+	}
