--- a/Mobile_App/MyApplication/app/src/main/res/layout/content_main.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/content_main.xml
@@ -53,9 +53,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="@+id/Login_Button"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="154dp"
+        android:layout_marginBottom="77dp"
         app:layout_constraintLeft_toLeftOf="@+id/Login_Button"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <Button
         android:id="@+id/Login_Button"
@@ -70,5 +70,21 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="21dp"
         app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/Main_Text_3"
+        android:layout_width="295dp"
+        android:layout_height="143dp"
+        android:text="Explore Destinations around the world.  View your travel books and add Destinations."
+        android:textSize="25sp"
+        android:textColor="#f7f7f9"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@+id/Main_Text_2"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.587" />
 
 </android.support.constraint.ConstraintLayout>
