--- a/Mobile_App/MyApplication/app/src/main/res/values/styles.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/values/styles.xml
@@ -17,4 +17,24 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="editText_style">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/edittext_Background</item>
+        <item name="android:layout_margin">7dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ems">10</item>
+    </style>
+<style name="ButtonStyle">
+    <item name="android:background">@drawable/editbutton_Style</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+</style>
+
+    <style name="Text_Style">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+    </style>
 </resources>
