List trip destination UI
Login UI fixed.  Gradient color schemes.  Trip List still needs some rendering

--- a/Mobile_App/MyApplication/app/src/main/res/drawable/editbutton_style.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/drawable/editbutton_style.xml
@@ -3,7 +3,7 @@
     <item >
         <shape android:shape="rectangle">
             <corners android:radius="50dp"/>
-            <solid android:color="#71DA98"/>
+            <solid android:color="#5cb85c"/>
         </shape>
     </item>
 </selector>
