--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -4,49 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    tools:context="travel_buddyapp.travelbuddyapp.LoginAct">
+    tools:context="travel_buddyapp.travelbuddyapp.LoginAct"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp"
+    android:background="@drawable/gradient_blue">
 
     <Button
-        android:id="@+id/button"
-        style="@style/ButtonStyle"
-        android:layout_width="300dp"
-        android:layout_height="46dp"
-        android:text="Log in"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="336dp" />
+        android:id="@+id/login_button"
+        android:layout_width="265dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="20dp"
+        android:background="#5cb85c"
+        android:text="Login"
+        android:textColor="#f7f7f9"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
     <EditText
-        android:id="@+id/editText"
-        style="@style/editText_style"
-        android:layout_width="250dp"
+        android:id="@+id/username_text"
+        android:layout_width="235dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="-22dp"
+        android:layout_marginTop="7dp"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="202dp" />
+        app:layout_constraintLeft_toRightOf="@+id/back_button"
+        app:layout_constraintTop_toBottomOf="@+id/username_label" />
 
     <EditText
-        android:id="@+id/editText2"
-        style="@style/editText_style"
-        android:layout_width="250dp"
+        android:id="@+id/password_text"
+        android:layout_width="235dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="6dp"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="266dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/username_text"
+        app:layout_constraintTop_toBottomOf="@+id/password_label" />
 
     <TextView
-        android:id="@+id/textView"
-        style="@style/Text_Style"
+        android:id="@+id/login_label"
+        android:layout_width="124dp"
+        android:layout_height="65dp"
+        android:text="Login"
+        android:textColor="#f7f7f9"
+        android:textSize="50sp"
+        android:layout_marginStart="51dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="65dp"
+        android:layout_marginLeft="73dp" />
+
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="68dp"
+        android:layout_height="41dp"
+        android:text="Back"
+        android:textColor="#f7f7f9"
+        android:background="@null"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp" />
+
+    <TextView
+        android:id="@+id/username_label"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:textColor="#f7f7f9"
+        android:text="Username:"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="153dp"
+        android:layout_marginLeft="87dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/password_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="#f7f7f9"
+        android:text="Password:"
+        android:textSize="24sp"
+        android:layout_marginLeft="87dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/username_text" />
+
+    <Button
+        android:id="@+id/forgot_password_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="16dp"
+        android:background="@null"
+        android:textStyle="italic"
         android:text="Forgot your password?"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="397dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="153dp"
-        android:layout_height="70dp"
-        android:text="Log in"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="63dp" />
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
 </android.support.constraint.ConstraintLayout>
