--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,8 @@
         android:layout_marginTop="6dp"
         android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@+id/username_text"
-        app:layout_constraintTop_toBottomOf="@+id/password_label" />
+        app:layout_constraintTop_toBottomOf="@+id/password_label"
+        />
 
     <TextView
         android:id="@+id/login_label"
