--- a/Mobile_App/MyApplication/app/src/main/res/layout/trip_list.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/trip_list.xml
@@ -10,7 +10,7 @@
         android:textStyle="bold"
         android:textSize="35sp"
         android:textColor="#f7f7f9"
-        android:background="@drawable/gradient_green"
+        android:background="@drawable/gradient_blue2"
         />
 
     <TextView
