--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     tools:context="travel_buddyapp.travelbuddyapp.LoginAct"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp"
-    android:background="@drawable/gradient_blue">
+    android:background="@drawable/gradient_blue2">
 
     <Button
         android:id="@+id/login_button"
@@ -27,7 +27,7 @@
         android:id="@+id/username_text"
         android:layout_width="235dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="-22dp"
+        android:layout_marginLeft="14dp"
         android:layout_marginTop="7dp"
         android:inputType="textEmailAddress"
         app:layout_constraintLeft_toRightOf="@+id/back_button"
@@ -37,8 +37,8 @@
         android:id="@+id/password_text"
         android:layout_width="235dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="9dp"
         android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@+id/username_text"
         app:layout_constraintTop_toBottomOf="@+id/password_label"
