--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_reset_pass_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_reset_pass_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_blue"
+    android:background="@drawable/gradient_blue2"
     tools:context="travel_buddyapp.travelbuddyapp.ResetPass_Activity">
 
     <Button
@@ -19,30 +19,49 @@
 
     <Button
         android:id="@+id/Send_button2"
-        android:layout_width="184dp"
-        android:layout_height="50dp"
-        android:text="Send me Instractions"
+        android:layout_width="341dp"
+        android:layout_height="54dp"
+        android:text="Submit"
         android:textColor="#f7f7f9"
         android:background="#5cb85c"
-        tools:layout_editor_absoluteY="338dp"
-        tools:layout_editor_absoluteX="88dp" />
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#f7f7f9"
-        android:text="Enter Email for password reset:"
-        tools:layout_editor_absoluteY="165dp"
-        tools:layout_editor_absoluteX="82dp" />
+        android:text="Enter Email:"
+        android:textSize="24sp"
+        android:layout_marginLeft="40dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="289dp"
+        android:layout_height="51dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteY="234dp"
-        tools:layout_editor_absoluteX="72dp" />
+        android:layout_marginLeft="39dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset Password"
+        android:textSize="50sp"
+        android:textColor="#f7f7f9"
+        android:layout_marginLeft="13dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="79dp" />
 
 </android.support.constraint.ConstraintLayout>
