--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_blue"
+    android:background="@drawable/gradient_blue2"
     tools:context="travel_buddyapp.travelbuddyapp.SignUpActivity">
 
 
@@ -15,8 +15,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        tools:layout_editor_absoluteY="73dp"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/Email_editText2"
@@ -24,8 +26,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteY="129dp"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/Password_editText3"
@@ -33,8 +37,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="193dp" />
+        android:layout_marginTop="6dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/ConPassword_editText4"
@@ -42,72 +48,91 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="253dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:textColor="#f7f7f9"
+        android:textSize="50sp"
+        android:layout_marginLeft="106dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="26dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
         android:text="Username:"
+        android:textSize="20sp"
         android:textColor="#f7f7f9"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email:"
+        android:textSize="20sp"
         android:textColor="#f7f7f9"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="116dp" />
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/Name_editText" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password:"
+        android:textSize="20sp"
         android:textColor="#f7f7f9"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="172dp" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/Email_editText2"
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button2" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm Password:"
+        android:textSize="20sp"
         android:textColor="#f7f7f9"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="236dp" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/Password_editText3"
+        android:layout_marginLeft="45dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/Sign_Up_button"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="291dp"
+        android:layout_height="53dp"
         android:text="Sign Up"
+        android:textSize="20sp"
         android:background="#5cb85c"
         android:textColor="#f7f7f9"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="366dp" />
+        android:layout_marginTop="23dp"
+        app:layout_constraintTop_toBottomOf="@+id/ConPassword_editText4"
+        android:layout_marginLeft="33dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/Back_button2"
         android:layout_width="83dp"
         android:layout_height="42dp"
         android:text="Back"
-        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteX="0dp"
         android:textColor="#f7f7f9"
         android:background="@null"
-        tools:layout_editor_absoluteY="-6dp" />
+        tools:layout_editor_absoluteY="0dp" />
 </android.support.constraint.ConstraintLayout>
