--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_new_travelbook_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_new_travelbook_.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_blue">
+    android:background="@drawable/gradient_green"
     tools:context="travel_buddyapp.travelbuddyapp.NewTravelbook_Activity">
-
 
     <Button
         android:id="@+id/Back_button"
@@ -15,28 +14,33 @@
         android:text="Back"
         android:textColor="#f7f7f9"
         android:background="@null"
-        tools:layout_editor_absoluteX="-10dp"
+        tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="2dp" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="240dp"
-        android:layout_height="97dp"
+        android:layout_width="297dp"
+        android:layout_height="133dp"
         android:text="New Travelbook"
+        android:textAlignment="center"
         android:textColor="#f7f7f9"
-        android:textSize="36sp"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="86dp" />
+        android:textSize="50sp"
+        android:layout_marginLeft="42dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="63dp" />
 
     <EditText
         android:id="@+id/Name_editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="304dp"
+        android:layout_height="43dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="233dp" />
+        android:layout_marginLeft="42dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView9"
@@ -44,16 +48,24 @@
         android:layout_height="wrap_content"
         android:textColor="#f7f7f9"
         android:text="Name:"
-        tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="205dp" />
+        android:textSize="24sp"
+        android:layout_marginLeft="42dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="309dp"
+        android:layout_height="55dp"
         android:text="Save"
-        android:background="#5cb85c"
+        android:background="#4a90e2"
         android:textColor="#f7f7f9"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="315dp" />
+        android:layout_marginLeft="42dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/Name_editText2"
+        tools:layout_editor_absoluteY="290dp"
+        tools:layout_editor_absoluteX="47dp" />
+
 </android.support.constraint.ConstraintLayout>
