--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -14,35 +14,34 @@
         android:layout_width="265dp"
         android:layout_height="48dp"
         android:layout_marginEnd="62dp"
-        android:layout_marginRight="47dp"
         android:layout_marginStart="62dp"
-        android:layout_marginTop="17dp"
         android:background="#5cb85c"
         android:textColor="#f7f7f9"
         android:text="Login"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_text" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/password_text"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/back_button" />
 
     <EditText
         android:id="@+id/username_text"
-        android:layout_width="235dp"
+        android:layout_width="351dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="7dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintLeft_toRightOf="@+id/back_button"
+        android:layout_marginLeft="17dp"
+        app:layout_constraintLeft_toLeftOf="@+id/back_button"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/username_label" />
 
     <EditText
         android:id="@+id/password_text"
-        android:layout_width="235dp"
+        android:layout_width="351dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="9dp"
         android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="@+id/username_text"
+        android:layout_marginTop="9dp"
         app:layout_constraintTop_toBottomOf="@+id/password_label"
-        />
+        android:layout_marginLeft="17dp"
+        app:layout_constraintLeft_toLeftOf="@+id/back_button" />
 
     <TextView
         android:id="@+id/login_label"
@@ -52,10 +51,10 @@
         android:textColor="#f7f7f9"
         android:textSize="50sp"
         android:layout_marginStart="51dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/back_button"
+        android:layout_marginLeft="59dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="73dp" />
+        android:layout_marginTop="31dp" />
 
     <Button
         android:id="@+id/back_button"
@@ -66,8 +65,6 @@
         android:background="@null"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="0dp" />
 
     <TextView
@@ -77,10 +74,10 @@
         android:textColor="#f7f7f9"
         android:text="Username:"
         android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="153dp"
-        android:layout_marginLeft="87dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/back_button"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_label" />
 
     <TextView
         android:id="@+id/password_label"
@@ -89,23 +86,23 @@
         android:textColor="#f7f7f9"
         android:text="Password:"
         android:textSize="24sp"
-        android:layout_marginLeft="87dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="12dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/back_button"
+        android:layout_marginTop="7dp"
         app:layout_constraintTop_toBottomOf="@+id/username_text" />
 
     <Button
         android:id="@+id/forgot_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="16dp"
         android:background="@null"
         android:textStyle="italic"
         android:text="Forgot your password?"
         android:textColor="#f7f7f9"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="@+id/login_button"
-        app:layout_constraintTop_toBottomOf="@+id/login_button" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        android:layout_marginLeft="81dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
