--- a/css/styles.css
+++ b/css/styles.css
@@ -539,3 +539,53 @@ a {
 .to {
 	font-size: 30px;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background: linear-gradient(45deg, #4a90e2, #58df85);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+	color: #f7f7f9;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-backdrop {
+	z-index: -10;
+}
+
+.modal-header {
+	height: 5rem;
+	vertical-align: center;
+}
+
+.modal-footer {
+	height: 3.5rem;
+	vertical-align: center;
+}
