--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:background="@drawable/gradient_blue2">
 
     <Button
-        android:id="@+id/Back_button"
+        android:id="@+id/bBack_Login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
@@ -29,28 +29,28 @@
         android:textColor="#f7f7f9"
         android:text="Login"
         android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/etpassword"
+        app:layout_constraintTop_toBottomOf="@+id/etpassword_Login"
         android:layout_marginLeft="57dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button" />
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Login" />
 
     <EditText
-        android:id="@+id/etUserName"
+        android:id="@+id/etUsername_Login"
         android:layout_width="310dp"
         android:layout_height="40dp"
         android:inputType="text|textEmailAddress"
         android:layout_marginLeft="43dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Login"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/username_text" />
 
     <EditText
-        android:id="@+id/etpassword"
+        android:id="@+id/etpassword_Login"
         android:layout_width="310dp"
         android:layout_height="40dp"
         android:inputType="textPassword"
         android:layout_marginLeft="43dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        android:layout_marginTop="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Login"
+        android:layout_marginTop="11dp"
         app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
     <Button
@@ -75,7 +75,7 @@
         android:textColor="#f7f7f9"
         android:textSize="24dp"
         android:layout_marginLeft="43dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Login"
         android:layout_marginTop="17dp"
         app:layout_constraintTop_toBottomOf="@+id/login_text" />
 
@@ -87,9 +87,9 @@
         android:textColor="#f7f7f9"
         android:textSize="24dp"
         android:layout_marginLeft="43dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Login"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/etUserName" />
+        app:layout_constraintTop_toBottomOf="@+id/etUsername_Login" />
 
     <TextView
         android:id="@+id/login_text"
@@ -99,7 +99,7 @@
         android:textColor="#f7f7f9"
         android:textSize="50dp"
         android:layout_marginLeft="127dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Login"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="60dp" />
 
