--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_new_travelbook_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_new_travelbook_.xml
@@ -8,7 +8,7 @@
     tools:context="travel_buddyapp.travelbuddyapp.NewTravelbook_Activity">
 
     <Button
-        android:id="@+id/Back_button"
+        android:id="@+id/bBack_NewTravelbook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
@@ -26,19 +26,19 @@
         android:textColor="#f7f7f9"
         android:textSize="50sp"
         android:layout_marginLeft="42dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_NewTravelbook"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="63dp" />
 
     <EditText
-        android:id="@+id/Name_editText2"
+        android:id="@+id/Name_NewTravelbook"
         android:layout_width="304dp"
         android:layout_height="43dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
         android:layout_marginLeft="42dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_NewTravelbook"
         android:layout_marginTop="1dp"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -50,21 +50,21 @@
         android:text="Name:"
         android:textSize="24sp"
         android:layout_marginLeft="42dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_NewTravelbook"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bSave__NewTravelbook"
         android:layout_width="309dp"
         android:layout_height="55dp"
         android:text="Save"
         android:background="#4a90e2"
         android:textColor="#f7f7f9"
         android:layout_marginLeft="42dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_NewTravelbook"
         android:layout_marginTop="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/Name_editText2"
+        app:layout_constraintTop_toBottomOf="@+id/Name_NewTravelbook"
         tools:layout_editor_absoluteY="290dp"
         tools:layout_editor_absoluteX="47dp" />
 
