--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_reset_pass_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_reset_pass_.xml
@@ -8,7 +8,7 @@
     tools:context="travel_buddyapp.travelbuddyapp.ResetPass_Activity">
 
     <Button
-        android:id="@+id/Back_button"
+        android:id="@+id/bBack_ResetPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
@@ -18,15 +18,15 @@
         tools:layout_editor_absoluteY="-4dp" />
 
     <Button
-        android:id="@+id/Send_button2"
+        android:id="@+id/Send_ResetPass"
         android:layout_width="341dp"
         android:layout_height="54dp"
         android:text="Submit"
         android:textColor="#f7f7f9"
         android:background="#5cb85c"
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/etemail_resetPass"
+        android:layout_marginLeft="35dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -37,18 +37,18 @@
         android:text="Enter Email:"
         android:textSize="24sp"
         android:layout_marginLeft="40dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_ResetPass"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/etemail_resetPass"
         android:layout_width="289dp"
         android:layout_height="51dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_ResetPass"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -60,7 +60,7 @@
         android:textSize="50sp"
         android:textColor="#f7f7f9"
         android:layout_marginLeft="13dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_ResetPass"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="79dp" />
 
