--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_search_.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_search_.xml
@@ -8,7 +8,7 @@
     tools:context="travel_buddyapp.travelbuddyapp.Search_Activity">
 
     <Button
-        android:id="@+id/Back_button"
+        android:id="@+id/bBack_Search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
@@ -18,7 +18,7 @@
         tools:layout_editor_absoluteY="2dp" />
 
     <Button
-        android:id="@+id/Search_button2"
+        android:id="@+id/bSearch_Search"
         android:layout_width="232dp"
         android:layout_height="44dp"
         android:text="Search"
@@ -27,7 +27,7 @@
         android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/editText"
         android:layout_marginLeft="76dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button" />
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search" />
 
     <TextView
         android:id="@+id/textView6"
@@ -38,7 +38,7 @@
         android:textAlignment="center"
         android:textColor="#f7f7f9"
         android:layout_marginLeft="49dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="65dp" />
 
@@ -54,6 +54,6 @@
         android:layout_marginTop="18dp"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         android:layout_marginLeft="33dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button" />
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Search" />
 
 </android.support.constraint.ConstraintLayout>
