--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     tools:context="travel_buddyapp.travelbuddyapp.SignUpActivity">
 
     <Button
-        android:id="@+id/Back_button"
+        android:id="@+id/bBack_Signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
@@ -18,47 +18,47 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <EditText
-        android:id="@+id/etUserName"
+        android:id="@+id/etUsername_Signup"
         android:layout_width="351dp"
         android:layout_height="40dp"
         android:layout_marginLeft="17dp"
         android:layout_marginTop="0dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/username_text" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/etEmail_Signup"
         android:layout_width="351dp"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="-9dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/etpassword_Signup"
         android:layout_width="351dp"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="0dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
     <EditText
-        android:id="@+id/etPassword2"
+        android:id="@+id/etpassword2__Signup"
         android:layout_width="351dp"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="-2dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/confirmpassword_text" />
 
     <Button
@@ -77,36 +77,36 @@
         app:layout_constraintHorizontal_bias="0.503" />
 
     <EditText
-        android:id="@+id/etFirstName"
+        android:id="@+id/etFirstName_Signup"
         android:layout_width="189dp"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="0dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/firstname_text" />
 
     <EditText
-        android:id="@+id/etTown"
+        android:id="@+id/etTown_Signup"
         android:layout_width="189dp"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="-3dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/Town_text" />
 
     <EditText
-        android:id="@+id/etLastName"
+        android:id="@+id/etLastName_Signup"
         android:layout_width="155dp"
         android:layout_height="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintLeft_toRightOf="@+id/etFirstName"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="-32dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toRightOf="@+id/etFirstName_Signup"
         app:layout_constraintTop_toBottomOf="@+id/lastname_text" />
 
     <TextView
@@ -124,14 +124,14 @@
         android:layout_marginTop="16dp" />
 
     <EditText
-        android:id="@+id/etNumber"
+        android:id="@+id/etNumber_Signup"
         android:layout_width="155dp"
         android:layout_height="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintLeft_toRightOf="@+id/etTown"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="0dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toRightOf="@+id/etTown_Signup"
         app:layout_constraintTop_toBottomOf="@+id/number_text" />
 
     <TextView
@@ -141,10 +141,10 @@
         android:text="Username:"
         android:textColor="#f7f7f9"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
+        app:layout_constraintTop_toBottomOf="@+id/etFirstName_Signup" />
 
     <TextView
         android:id="@+id/password_text"
@@ -153,9 +153,9 @@
         android:text="Password:"
         android:textColor="#f7f7f9"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"
+        app:layout_constraintTop_toBottomOf="@+id/etEmail_Signup"
         android:layout_marginLeft="16dp" />
 
     <TextView
@@ -165,7 +165,7 @@
         android:text="First Name:"
         android:textColor="#f7f7f9"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         app:layout_constraintTop_toBottomOf="@+id/tvSignup"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="16dp" />
@@ -189,10 +189,10 @@
         android:text="Email:"
         android:textColor="#f7f7f9"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/etUserName" />
+        app:layout_constraintTop_toBottomOf="@+id/etUsername_Signup" />
 
     <TextView
         android:id="@+id/number_text"
@@ -202,7 +202,7 @@
         android:textColor="#f7f7f9"
         android:textSize="24sp"
         android:layout_marginTop="-12dp"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/etpassword2__Signup"
         app:layout_constraintLeft_toRightOf="@+id/Town_text"
         android:layout_marginLeft="148dp" />
 
@@ -213,8 +213,8 @@
         android:text="Confirm Password:"
         android:textColor="#f7f7f9"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
+        app:layout_constraintTop_toBottomOf="@+id/etpassword_Signup"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="0dp" />
 
@@ -225,9 +225,9 @@
         android:text="Town:"
         android:textColor="#f7f7f9"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Signup"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/etpassword2__Signup"
         android:layout_marginLeft="16dp" />
 
 </android.support.constraint.ConstraintLayout>
