--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_trip.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_trip.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="130dp" />
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/bBack_Trip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
@@ -43,14 +43,14 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/viewmap_button"
+        android:id="@+id/bviewmap_Trip"
         android:layout_width="213dp"
         android:layout_height="55dp"
         android:text="View Map"
         android:background="#4a90e2"
         android:textColor="#f7f7f9"
         android:layout_marginStart="85dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button"
+        app:layout_constraintLeft_toLeftOf="@+id/bBack_Trip"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/Trip_text"
         android:layout_marginLeft="85dp" />
