--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_welcome.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_welcome.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="37dp" />
 
     <Button
-        android:id="@+id/Search_Button"
+        android:id="@+id/bSearch_Welcome"
         android:layout_width="0dp"
         android:layout_height="66dp"
         android:background="#4a90e2"
