--- a/Mobile_App/MyApplication/app/src/main/res/drawable/gradient_green.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/drawable/gradient_green.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="-90"
-                android:startColor="#4a90e2"
-                android:endColor="#58df85"
+                android:startColor="#6e95a3"
+                android:endColor="#85a37c"
                 android:type="linear"
                 />
         </shape>
