--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_trip.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_trip.xml
@@ -9,10 +9,12 @@
 
     <TextView
         android:id="@+id/Trip_text"
-        android:layout_width="296dp"
-        android:layout_height="65dp"
+        android:layout_width="359dp"
+        android:layout_height="147dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginStart="130dp"
         android:layout_marginTop="16dp"
+        android:autoText="false"
         android:text="Trip 1"
         android:textColor="#f7f7f9"
         android:textColorLink="@android:color/black"
@@ -21,8 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
-        tools:layout_editor_absoluteX="160dp"
-        android:layout_marginLeft="130dp" />
+        tools:layout_editor_absoluteX="84dp" />
 
     <Button
         android:id="@+id/bBack_Trip"
@@ -50,29 +51,38 @@
         android:background="#4a90e2"
         android:textColor="#f7f7f9"
         android:layout_marginStart="85dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginLeft="85dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/Trip_text"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/tripresults_listview"
-        app:layout_constraintHorizontal_bias="0.31" />
+        app:layout_constraintHorizontal_bias="0.307"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <ListView
-        android:id="@+id/tripresults_listview"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="155dp"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="400dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        >
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/bviewmap_Trip"
+        app:layout_constraintVertical_bias="0.100000024">
+
+        <ListView
+            android:id="@+id/tripresults_listview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"></ListView>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
